volume.yml
---
apiVersion: extensions/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-storage-lab
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
        env: testenv
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 3
        #   periodSeconds: 5
        # readinessProbe:  #Startup app
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        volumeMounts:
          - mountPath: /usr/share/nginxtest/html
            name: vol-ssd
      volumes:
        - name: vol-ssd
          persistentVolumeClaim:
            claimName: ssd-1
