ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-lab
  # annotations:
    # kubernetes.io/ingress.class: nginx
    # kubernetes.io/ingress.global-static-ip-name: k8s-public-1
spec:
  rules:
  - host: big.billme.co.th
    http:
      paths:
      - backend:
          serviceName: nginx-deployment-lab-service
          servicePort: 80
  tls:
  - hosts: 
    - big.billme.co.th
    secretName: billme.co.th-ssl
